# video-action-recognition

./: .gitignore  LICENSE  README.md  download_data.py  pyproject.toml
scripts/: inference.py  train.py
src/: config.py  dataset.py  engine.py  model.py  utils.py
