[project]
name = "video-action-recognition"
version = "0.1.0"
description = "Video action recognition powered by LS-ViT transformers. Classifies 51 human actions from HMDB51 dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "timm>=1.0.25",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
]
